--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "koa-vuessr",
+  "name": "koa-vuessr-middleware",
   "version": "0.0.1",
   "description": "a vue ssr  middleware for koa",
   "main": "index.js",
@@ -20,9 +20,10 @@
     "lru-cache": "^4.1.3",
     "mini-css-extract-plugin": "^0.4.4",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.17",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.1",
