--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "koa-vuessr-middleware",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "a vue ssr  middleware for koa",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.conf.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.conf.js --progress --hide-modules"
   },
+  "keywords": [
+    "koa", "middleware", "vue", "ssr"    
+  ],
   "bin": {
     "buildssr": "./bin.js"
   },
@@ -17,22 +22,22 @@
   "author": "Evont <evontgoh@foxmail.com>",
   "license": "ISC",
   "dependencies": {
-    "lru-cache": "^4.1.3",
-    "mini-css-extract-plugin": "^0.4.4",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.17",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "es6-promise": "^4.2.5",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "lru-cache": "^4.1.3",
+    "mini-css-extract-plugin": "^0.4.4",
     "rimraf": "^2.6.2",
     "url-loader": "^1.1.2",
+    "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
+    "vue-server-renderer": "^2.5.17",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
@@ -40,5 +45,8 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "vue-router": "^3.0.1"
   }
 }
