--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "glob": "^7.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   }
 }
