--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lru-cache": "^4.1.3",
     "mini-css-extract-plugin": "^0.4.4",
     "rimraf": "^2.6.2",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
