--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0"
-  },
-  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "glob": "^7.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
