--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "glob": "^7.1.3",
     "lru-cache": "^4.1.3",
     "mini-css-extract-plugin": "^0.4.4",
+    "null-loader": "^0.1.1",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "sw-precache-webpack-plugin": "^0.11.5",
