--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ssr"
   ],
   "bin": {
-    "buildssr": "./bin.js"
+    "vuessr": "./bin.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
@@ -59,9 +60,5 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0"
   }
 }
